[package]
name = "number-as"
version = "1.0.5"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/number-as"
homepage = "https://magiclen.org/number-as"
keywords = ["primitive", "number", "into", "from", "as"]
categories = ["no-std"]
description= "Extend primitive number types to make them have a `number_as` method."
readme = "README.md"
license = "MIT"

[badges.travis-ci]
repository = "magiclen/number-as"
branch = "master"

[dependencies]
